<resources>
    <string name="app_name">PersonalCaddy</string>
    <string name="title_home">Previous Rounds</string>
    <string name="title_dashboard">Statistics</string>
    <string name="title_notifications">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="fairway">Fairway</string>
    <string name="rough">Rough</string>
    <string name="sand">Sand</string>
    <string name="green">Green</string>
    <string name="tee_box">Tee Box</string>
    <string name="uphill">Uphill</string>
    <string name="downhill">Downhill</string>
    <string name="flat">Flat</string>
    <string name="against_wind">Against Wind</string>
    <string name="with_wind">With Wind</string>
    <string name="no_wind">No Wind</string>
    <string-array name="clubs">
        <item>01: Driver</item>
        <item>02: 3Wood</item>
        <item>03: 5Wood</item>
        <item>04: 7Wood</item>
        <item>05: 3-iron</item>
        <item>06: 4-iron</item>
        <item>07: 5-iron</item>
        <item>08: 6-iron</item>
        <item>09: 7-iron</item>
        <item>10: 8-iron</item>
        <item>11: 9-iron</item>
        <item>12: Pitching-Wedge</item>
        <item>13: Sand-Wedge</item>
        <item>14: Gap-Wedge</item>
        <item>15: Lob-Wedge</item>
        <item>16: Putter</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>