<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.cbrady.personalcaddy.models.User" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/editTextEmailAddressSignIn"
            android:layout_width="208dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="93dp"
            android:background="@color/hint"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp" />

        <EditText
            android:id="@+id/editTextPasswordSignIn"
            android:layout_width="208dp"
            android:layout_height="45dp"
            android:layout_below="@+id/editTextEmailAddressSignIn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="93dp"
            android:background="@color/hint"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="5dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPasswordSignIn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="71dp"
            android:backgroundTint="@color/teal_700"
            android:text="LOGIN" />

        <TextView
            android:id="@+id/signUpHere"
            android:layout_width="271dp"
            android:layout_height="48dp"
            android:layout_below="@+id/buttonLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="78dp"
            android:clickable="true"
            android:gravity="center"
            android:text="Not Registered? Sign Up Here"
            android:textColor="@color/teal_700" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="173dp"
            android:layout_height="115dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="127dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="127dp"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="196dp"
            android:layout_height="45dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="115dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/teal_700"
            android:textSize="18sp" />


    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>