<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.cbrady.personalcaddy.models.User" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <EditText
            android:id="@+id/editTextEmailAddressSignUp"
            android:layout_width="208dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="96dp"
            android:background="@color/hint"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp" />

        <EditText
            android:id="@+id/editTextPasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@+id/editTextEmailAddressSignUp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="90dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="96dp"
            android:background="@color/hint"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="5dp"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPasswordSignUp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="45dp"
            android:backgroundTint="@color/teal_700"
            android:text="REGISTER" />

        <TextView
            android:id="@+id/signInHere"
            android:layout_width="314dp"
            android:layout_height="46dp"
            android:layout_below="@+id/buttonRegister"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="57dp"
            android:clickable="true"
            android:gravity="center"
            android:text="Already Registered? Login Here"
            android:textColor="@color/teal_700" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="173dp"
            android:layout_height="115dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="127dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="127dp"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="196dp"
            android:layout_height="45dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="115dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/teal_700"
            android:textSize="18sp" />


    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>